--- a/task.ipynb
+++ b/task.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e1b45f6",
+   "id": "770cb152",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,20 +13,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b27b56fa",
+   "id": "18c3d1bb",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "\n",
     "%config InlineBackend.figure_format='retina'"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1c339dfc",
+   "id": "8daf79cc",
    "metadata": {},
    "source": [
     "# DS3 Consulting FA22 Interview Task\n",
@@ -35,6 +36,8 @@
     "You are consulting for a (fictional) real estate agency in Melbourne, Australia. You have been provided with a dataset of housing sales from January 28, 2016 to March 17, 2018. At the time this dataset was collected, Melbourne was entering a housing bubble and realtors were scrambling to deal with the increased buyer demand.\n",
     "\n",
     "The agency makes money through the following business model: they receive 2.5% of the property's sale price as a commission, of which 90% goes to the real estate agent who made the sale and 10% goes to the agency.\n",
+    "\n",
+    "The dataset is at the file in `FILEPATH` and the realtors working for the agency are in `REALTORS`.\n",
     "\n",
     "## Dataset Details\n",
     "38,457 entries, with the following key columns (the dataset also contains some other columns that are not important to this task):\n",
@@ -55,66 +58,85 @@
     "\n",
     "## Key Questions\n",
     "1. How does the distance to the CBD (central business district) relate to the house price? What else could be affecting this relationship?\n",
-    "2. The city of Melbourne is considering requiring additional licensing in 2019 for realtors to sell duplexes or townhouses (coded u and t in the 'Type' column, respectively). For one year, this license costs AU\\$50,000, covered by the agency. Is it justified to buy this license for one of your top agents, Woodards?\n",
-    "3. Based on the data, what is the probability a house in Malvern sells for an asking price of AU\\$4,000,000? What assumptions are we making here?"
+    "2. The agency is interested in knowing who their top earners are. How much did each realtor in `REALTORS` bring into the agency in 2018?\n",
+    "3. **ML:** Discuss the design of a system that, given a new listing's attributes (as listed in dataset details), will produce (a) the probability of selling at the given price and (b) the best realtor in the agency to sell that house."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36396cc7",
+   "id": "b497c572",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import your data here\n",
+    "# constants\n",
     "\n",
-    "FILEPATH = \"data/Melbourne_housing_FULL.csv\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b710dda5",
-   "metadata": {},
-   "source": [
-    "## Task 1: Distance to CBD"
+    "FILEPATH = \"data/Melbourne_housing_FULL.csv\"\n",
+    "REALTORS = {\"Nelson\", \"Woodards\", \"Marshall\", \"Buxton\", \"RT\"}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d35a175",
+   "id": "60d86968",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import your data here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20a91c32",
+   "metadata": {},
+   "source": [
+    "## Question 1: Distance to CBD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40cb89a3",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "14085bc9",
+   "id": "4ecf1383",
    "metadata": {},
    "source": [
-    "## Task 2: Duplex License"
+    "## Question 2: Seller Revenues"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c0b7a87",
+   "id": "5a02b422",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ce4280f4",
+   "id": "a6f5a7e3",
    "metadata": {},
    "source": [
-    "## Task 3: Malvern House"
+    "## Question 3: Sell Predictor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb016af8",
+   "metadata": {},
+   "source": [
+    "**Type your response here.**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab17b194",
+   "id": "f78b18dc",
    "metadata": {},
    "outputs": [],
    "source": []
